--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,11 @@ body, html {
     height: 100%; /* Full height */
 }
 
-.activity-list {
+.activity-list { 
     list-style-type: none;
     padding: 0;
     margin: 0;
+    width: 100%;
     max-height: calc(100vh - 60px); /* Adjust based on the header height */
     overflow-y: auto; /* Enables vertical scrolling */
 }
@@ -95,6 +96,11 @@ body, html {
     .right {
         flex: 3; /* 30% */
     }
+    .activity-list-div{
+      display: flex;
+      height: 80%;
+      width: 100%;
+    }
 }
 
 /* Mobile layout */
@@ -105,5 +111,10 @@ body, html {
 
     .left, .right {
         flex: 1; /* 50% each */
+    }
+    .activity-list-div{
+      display: flex;
+      height: 80%;
+      width: 100%;
     }
 }
