--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body, html {
     height: 10px;
     border-radius: 50%;
     object-fit: cover;
-    border: 3px solid white;
+    border: 3px solid #ff90bc;
 }
 
 .info-content {
